--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_title: "PowOsh - Share emotions with friends"
 meta_description: "Share your favourite books with your friends, and find your next great read in a friend's collection."
-meta_image: "banner5.jpg" # Une image dans votre dossier app/assets/images/
+meta_image: "meta_image.jpg" # Une image dans votre dossier app/assets/images/
 twitter_account: "@t_godet" # indispensable pour les Twitter Cards
